# b3_ajustes

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  scraper.py
docs/: PRD.md
examples/: run_programmatic.py
src/b3ajustes/: __init__.py  cli.py  scraper.py
